--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,6 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-button (click)="hideTabs()">Hide Tabs</ion-button>
+  <ion-button (click)="showTabs()">Show Tabs</ion-button>
 </ion-content>
