--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+  <ion-tab-bar [hidden]="!tabsVisible" slot="bottom">
+    <ion-tab-button  tab="tab1">
       <ion-icon name="triangle"></ion-icon>
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
